<resources>
    <string name="app_name">NSTU Info</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="introduction">Introduction</string>
    <string name="introduction_details">
        The natural setting along with its human habitations of the Southern regions of Bangladesh has been endowed with the vast and immense potentials that can fully be harnessed only through creation of a band of skilled manpower equipped with the latest knowledge of science and technology. In the beginning of its age and expending its activities to spread the light of modern education of Science and Technology and practising wisdom in every field of knowledge\n\n
        <b>Noakhali Science and Technology University</b> was established with immense hope for maintaining the high quality education. Since its establishment, it is running without any session jam and student politics. This University family is fully determined to gain its ultimate goal of success. Here are all details about the university.
    </string>
    <string name="introduction_info_1">
        <b>Vice Chancellor</b>\n
        Prof. Dr. M Wahiduzzaman\n
        Telephone: <a href="tel:+880-321-62833">+880-321-62833</a>, <a href="tel:62733">62733</a>, <a href="tel:62655">62655</a>\n
        Mobile: <a href="tel:01730042888">01730042888</a>\n
        Email: <a href="mailto:mdwahid@yahoo.com">mdwahid@yahoo.com</a>
    </string>
    <string name="introduction_info_2">
        <b>Pro Vice Chancellor</b>\n
        DR. MD. ABUL HOSSAIN\n
        Phone: <a href="tel:+88032171484">+88032171484</a>\n
        Mobile: <a href="tel:01713012916">01713012916</a>\n
        Fax: <a href="tel:+88032162788">+88032162788</a>
    </string>
    <string name="introduction_info_3">

        <u><b>Establishment:</b></u>\n
        <b>Bill Passed at:</b> 15th July, 2001\n
        <b>Bill Effective at:</b> 25th August, 2003\n
        <b>Academic program started from:</b> 22nd June, 2006\n
        <b>Location:</b> 8 Kilometer south from Noakhali Town, and at the west side of Sonapur-SubornoChar road.\n
        <b>Area:</b> 101 Acres.\n
        <b>Faculty:</b> 3\n
        <ul>
            <li>Faculty of Science</li>\n
            <li>Faculty of Engineering &amp; Technology</li>\n
            <li>Faculty of Social Science &amp; Business Administration</li>
        </ul>
        \n\n

        <u><b>Departments:</b></u>\n
        01. Computer Science and Telecommunication Engineering (CSTE) (<a href="http://cste.nstu.edu.bd/">cste.nstu.edu.bd</a>) \n
        02. Fisheries and Marine Science (FIMS) (<a href="http://www.fims-nstu.org">www.fims-nstu.org</a>)\n
        03. Pharmacy \n
        04. Applied Chemistry &amp; Chemical Engineering (ACCE)\n
        05. Microbiology\n
        06. Applied Mathematics(A. MTH)\n
        07. English\n
        08. Food Technology and Nutrition Science(FTNS)\n
        09. Environmental Science and Disaster Management (ESDM)\n
        10. Business Administration(BA)\n
        11. Information and Communication Engineering (ICE)\n
        12. Biotechnology and Genetic Engineering(BGE)\n
        13. Department of Economics\n
        14. Agriculture\n
        15. Department of Statistics\n
        16. Department of Electrical and Electronic Engineering\n
        17. Department of Bangladesh and Liberation War Studies\n

        \n
        <u><b>Institutes:</b></u>\n
        01. Institute of Information Science (IIS)\n
        02. Institute of Information Technology (IIT)\n
        \n
        
        <b>Medium:</b> English\n
        <b>Students: </b>4700\n
        <b>Teachers:</b> 162\n
        <b>Officers:</b> 76\n
        <b>Staffs: </b>154\n
        <b>Academic Buildings: </b>2\n
        <b>Administrative Building(s):</b> 1\n
        <b><u>Halls</u>: </b>2\n
        1. Vasha Shaheed Abdus Salam Hall\n
        2. Hajrat Bibi Khadija Hall\n
        3. Abdul Malek Hall\n
        4. Bangabandhu Sheikh Mujibur Rahman Hall(in construct)\n
        5. Sheikh Fazilatunnesa  Hall (in construct)\n
        
        \n
        <b>Dormitory:</b> 2 (Teachers Dormatory &amp; Staffs Dormatory)\n
        <b>Apartment:</b> 1\n
        \n

        <b>Others : </b>Great Freedom Fighter Hazi Mohammad Edris
        Auditorium, BongoBondu Mural, Shaheed Minar, Liberation Sculpture, TSC Building, Central Mosque, VIP Guest House, Canteen Shed, Ansar Shed.\n
        <b>Central Library: </b>9067 books, 428 journal. Ebooks 5 lakh\n
        <b>Official website:</b> <a href="http://www.nstu.edu.bd">www.nstu.edu.bd</a>\n
        <b>Email:</b> <a href="mailto:info@nstu.edu.bd">info@nstu.edu.bd</a>

    </string>
    <string name="regent_chairman_title">Chairman</string>
    <string name="regent_chairman_details">
        <b>Vice Chancellor</b>\n
        Telephone: <a href="tel:+880-321-62833">+880-321-62833</a>, <a href="tel:62733">62733</a>, <a href="tel:62655">62655</a>
    </string>
    <string name="regent_member_title">Members</string>
    <string name="regent_member_1">
        <b>Pro Vice Chancellor</b>\n
        DR. MD. ABUL HOSSAIN\n
        Phone: <a href="tel:+88032171484">+88032171484</a>\n
        Mobile: <a href="tel:01713012916">01713012916</a>\n
        Fax: <a href="tel:+88032162788">+88032162788</a>\n
    </string>
    <string name="regent_member_hint_1">
        <ul><li>Two parliamentary members nominated by parliament leader, one of them should be from greater Noakhali region:</li></ul>
    </string>
    <string name="regent_member_2">
        <b>Mr. Mohammed Ekramul Karim Chowdhury</b>\n
        MP Noakhali-4, Noakhali.\n
        Mobile: <a href="tel:01713210140">01713210140</a>
    </string>
    <string name="regent_member_3">
        <b>Mr. A.B.M Fazle Karim Chowdhury</b>\n
        MP Chittagong-6, Chittagong\n
        Mobile: <a href="tel:01726000480">01726000480</a>
    </string>
    <string name="regent_member_hint_2">
        <ul><li>Two members of joint-secretary rank nominated by the government.</li></ul>
    </string>
    <string name="regent_member_4">
        <b>Additional Secretary (Development) Ministry of Education</b>,\n
        The People\'s Republic of Bangladesh Government Bangladesh Secretariat,\n
        Dhaka-1000.\n
        Telephone: <a href="tel:+88029556789">+880-2-9556789</a>
    </string>
    <string name="regent_member_5">
        <b>Additional Secretary (University) Ministry of Education</b>,\n
            The People\'s Republic of Bangladesh Government Bangladesh Secretariat,\n
            Dhaka-1000.\n
            Telephone: <a href="tel:+88029512282">+880-2-9512282</a>
    </string>
    <string name="regent_member_hint_3">
        <ul><li>Three members from the research institute of Science and Technology Affairs nominated by the government.</li></ul>
    </string>
    <string name="regent_member_6">
        <b>Md. Nazrul Islam</b>\n
        Chairman,\n
        BCSIR.\n
        Dr. Qudrat-E-Khuda road,\n
        Dhanmondi, Dhaka-1205.\n
        Mobile: <a href="tel:01199375278">01199375278</a>
    </string>
    <string name="regent_member_7">
        <b>Nurul Islam Nazem</b>\n
        Professor, Department of Geography and Environment\n
        University of Dhaka.\n
        Phone: <a href="tel:01819234025">01819234025</a>
    </string>
    <string name="regent_member_8">
        <b>Dr. Shirin Akter</b>\n
        Director\n
        Atomic Energy Centre, Dhaka\n
        Phone: <a href="tel:01715882330">01715882330</a>
    </string>
    <string name="regent_member_hint_4">
        <ul><li>Three prominent educationist nominated by the Chancellor.</li></ul>
    </string>
    <string name="regent_member_9">
        <b>Prof. Dr. Shariff Enamul Kabir</b>\n
            Department of Chemistry,\n
            Jahangirnagar University Savar, Dhaka.\n
            Phone: <a href="tel:01713464698">01713464698</a>
    </string>
    <string name="regent_member_10">
        <b>Dr. Md. Anwar Hossain</b>\n
        Microbiology Department\n
        University of Dhaka.\n
        Mobile: <a href="tel:01715363753">01715363753</a>
    </string>
    <string name="regent_member_11">
        <b>Md. Alamgir Kabir</b>\n
        Vice Chancellor.\n
        KUET.\n
        Phone: <a href="tel:01711884044">01711884044</a>
    </string>
    <string name="regent_member_12">
        <b>Chairman</b>\n
        Intermediate and Secondary Education Boards,\n
        Chittagong,\n
        Bangladesh Chairman Intermediate and Secondary Education Board.\n
        Chittagong.\n
        Phone: <a href="tel:0312553144">031-2553144</a>\n
        Phone: <a href="tel:01711723224">01711723224</a>
    </string>
    <string name="regent_member_hint_5">
        <ul><li>Three representatives from the teachers of this university nominated by the academic council.</li></ul>
    </string>
    <string name="regent_member_13">
        <b>Dr. Md. Jahangir Sarkar</b>\n
        Associate Professor\n
        Department of Fisheries and Marine Science\n
        Mobile: <a href="tel:01733910237">01733910237</a>
    </string>
    <string name="regent_member_14">
        <b>Dr. Muhammed Yousuf Miah</b>\n
        Associate Professor\n
        Applied Chemistry &amp; Chemical Engineering\n
        Mobile: <a href='tel:01742710338'>01742710338</a>\n
        Email: <a href="mailto:yan19742003@yahoo.com">yan19742003@yahoo.com</a>
    </string>
    <string name="regent_member_15">
        <b>Muhammad Mushfiqur Rahman</b>\n
        Assistant Professor\n
        Dept of English\n
        Phone: <a href="tel:01818085418">01818085418</a>\n
        Email: <a href="mailto:mmrs1981@yahoo.com">mmrs1981@yahoo.com</a>
    </string>
    <string name="academic_council_chairman_title">Chairman</string>
    <string name="central_library_intro">
        Library of NSTU is well furnished containing about 8000 books and around 500 local and foreign journals. Most important feature of this library is online library. Its construction has not been completed yet fully. When it will be started with its full bloom, students as well as other registered people of this university will be able to issue books from the library through online, and also can read the books. It is being developed day by day.
        \n\nYou can download the Academic booklist in PDF format.
        \n\n<a href="http://goo.gl/MMhnyU">Download from here</a>
        \n\nFor any information You can contact with them:
    </string>
    <string name="central_library_mem_1">
        Librarian\n
        <b>Mr Md Jahangir Hossain</b>\n
        Phone:<a href="tel:+88032171481">+880-321-71481</a>\n
        Mobile:<a href="tel:01716068982">01716068982</a>\n
        Email:<a href="mailto:nstulib9@yahoo.com">nstulib9@yahoo.com</a>
    </string>
    <string name="central_library_mem_2">
        Assistant Librarian\n
        <b>Md Salim Mia</b>\n
        Mobile:<a href="tel:01724571661">01724571661</a>\n
        Email:<a href="mailto:mdsalimmia5178@gmail.com">mdsalimmia5178@gmail.com</a>
    </string>
    <string name="central_library_mem_3">
        Documentation Officer\n
        <b>Md.  Babor Ali</b>\n
        Phone: <a href="tel:01722936805">01722-936805</a>\n
        Email: <a href="mailto:baborali.ru@gmail.com">baborali.ru@gmail.com</a>
    </string>
    <string name="central_library_mem_4">
        Section officer\n
        <b>Mr Mohammad Abdullah Al Mamun</b>\n
        Mobile:<a href="tel:01720175283">01720175283</a>\n
        Email:<a href="mailto:nstu_library@yahoo.com">nstu_library@yahoo.com</a>\n
        <b>Sayed Hossain</b>\n
        Mobile:<a href="tel:01920664044">01920664044</a>
    </string>
    <string name="central_library_mem_5">
        Cataloguer\n
        <b>Helal Uddin</b>\n
        Phone: <a href="tel:01723967788">01723967788</a>\n
        Email: <a href="mailto:helaluddin2928@gmail.com">helaluddin2928@gmail.com</a>
    </string>
</resources>